--- a/src/css/layout/_queries.css
+++ b/src/css/layout/_queries.css
@@ -14,6 +14,17 @@
   }
 }
 
+@media only screen and (min-width: 730px) {
+  /*
+    Fix small vertical scrollbar glitch for some resolutions
+    inside frames-handler
+    Detected in Chrome
+  */
+  div::-webkit-scrollbar {
+    width: 1em !important;
+  }
+}
+
 @media only screen and (max-width: 730px) {
   .app__central-container {
     .col-1-4 {
